--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <link href="css/soldier.css" rel="stylesheet" type="text/css">
 <!-- Add jQuery library -->
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 <!-- Add fancyBox -->
 <link rel="stylesheet" href="js/fancybox/source/jquery.fancybox.css" type="text/css" media="screen" />
 <script type="text/javascript" src="js/fancybox/source/jquery.fancybox.pack.js"></script>
